Add allocations support
